Fri Jul 06 20:23:41 2001  Steve Huston  <shuston@riverace.com>

        * ace/Refcoutned_Auto_Ptr.i (null): Change const_cast<> to
          ACE_const_cast() to build on older compilers, like IBM C/C++ 3.6.6.

Fri Jul 06 20:13:29 2001  Steve Huston  <shuston@riverace.com>

        * netsvcs/lib/Name_Handler.cpp:
        * netsvcs/lib/Server_Logging_Handler_T.cpp:
        * netsvcs/lib/Token_Handler.cpp:

          More ACE_DEBUG disables.

Fri Jul  6 15:55:54 2001  Ossama Othman  <ossama@uci.edu>

	* ace/OS.h (ACE_FD_SETSIZE):

	  Integrated patch from Jody Hagins <jody@atdesk.com>.  Set the
	  default reactor file descriptor set size to be an integer
	  constant rather than a preprocessor constant.  Some third party
	  software #undef FD_SETSIZE in their header files, causing build
	  problems in ACE.

Fri Jul 06 18:20:39 2001  Steve Huston  <shuston@riverace.com>

	* netsvcs/lib/Client_Logging_Handler.cpp: #if 0'd out a bunch of
          ACE_DEBUG statements that aren't appropriate for use in commercial
          logging. These can be #if 1'd if there's some doubt while debugging
          this stuff, but they aren't useful once debugged, and are
          distracting since they're interespersed with application records.

Fri Jul  6 13:40:20 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Log_Msg_UNIX_Syslog.cpp: Fixed a warning in g++. 

Fri Jul 06 11:39:41 2001  Steve Huston  <shuston@riverace.com>

        * ace/INET_Addr.h: Clarified (and improved doxygenation) of
          constructor and set() methods regarding byte orders.

        * tests/Max_Default_Port_Test.icc: New file for this test.
        * tests/tests.icp: Added Max_Default_Port_Test

Fri Jul  6 08:36:20 2001  Chad Elliott  <elliott_c@ociweb.com>

        * netsvcs/Makefile: Don't build this if ACE_COMPONENTS does not
	  contain Other.  The netsvcs library requires Naming_Context.

Fri Jul  6 05:44:13 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>
